src/main/webapp/uii/template/css/src/components/_icon.scss
.icon-wrapper {
    --icon-size: 1.125em;
    --icon-stroke: 2;

    display: inline-flex;
    align-items: center;
    justify-content: center;

    svg {
        color: currentColor;
        display: block;
        height: var(--icon-size);
        width: var(--icon-size);
        stroke-width: var(--icon-stroke);
    }
}

.icon-text {
    display: inline-flex;
    align-items: center;
    gap: 0.25em;
}

/* Size Modifiers */
.icon-wrapper.icon--xs { --icon-size: 0.75em; }
.icon-wrapper.icon--sm { --icon-size: 0.875em; }
.icon-wrapper.icon--md { --icon-size: 1.125em; }
.icon-wrapper.icon--lg { --icon-size: 1.25em; }
.icon-wrapper.icon--xl { --icon-size: 1.5em; }
.icon-wrapper.icon--xxl { --icon-size: 2em; }

/* Stroke Modifiers */
.icon-wrapper.icon--b1 { --icon-stroke: 1; }
.icon-wrapper.icon--b2 { --icon-stroke: 1.5; }
.icon-wrapper.icon--b3 { --icon-stroke: 2; }
.icon-wrapper.icon--b4 { --icon-stroke: 2.5; }
.icon-wrapper.icon--b5 { --icon-stroke: 3; }
.icon-wrapper.icon--b6 { --icon-stroke: 4; }

/* Color Modifiers */
.icon-wrapper.icon--light { color: #bbb; }
.icon-wrapper.icon--muted { color: var(--clr-neutral-400); }
.icon-wrapper.icon--primary { color: var(--clr-primary-400); }
.icon-wrapper.icon--success { color: #339933; }
.icon-wrapper.icon--warning { color: #e8860c; }
.icon-wrapper.icon--danger { color: #e51400; }
.icon-wrapper.icon--inwork { color: #ffbf21; }
.icon-wrapper.icon--deactivated { color: #ccc; }

